Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 The game is a dungeon crawler with some RPG elements, primarily targeted for mobile devices. Top-down view, very simple graphics, engaging gameplay - that's the goal.
 There'll be more info coming soon, for now just a screenshot of (never seen before! ;)) very-pre-alpha version:</p>
 
-<p><img src="http://imgur.com/a/w4Ibe" alt="Screenshot"></p>
+<p><img src="http://i.imgur.com/WaVmbEC.png" alt="Screenshot"></p>
       </section>
     </div>
 
