Added touch events handling
Crude right now, will require lots of improvement

--- a/bin/index.html
+++ b/bin/index.html
@@ -11,6 +11,8 @@
 		<script type="text/javascript" src="libs/js/jquery-1.11.3.min.js"></script>
 		<script type="text/javascript" src="libs/js/angular/angular.min.js"></script>
 		<script type="text/javascript" src="libs/js/angular/angular-route.js"></script>
+		<script type="text/javascript" src="libs/js/hammer.min.js"></script>
+		<script type="text/javascript" src="libs/js/gestures.min.js"></script>
 		
 		<script type="text/javascript" src="app/js/app.js"></script> 
 		<script type="text/javascript" src="app/js/controllers/start.js"></script> 
