Placeholder graphics, progress bar

--- a/bin/index.html
+++ b/bin/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta name="viewport" content="height=320, width=device-width">
 
-		<link rel="stylesheet" type="text/css" href="styles/style.css">
-		<link rel="stylesheet" type="text/css" href="styles/reset.css">
-		<link rel="stylesheet" type="text/css" href="styles/misc.css">
+		<link rel="stylesheet" type="text/css" href="styles/css/reset.css">
+		<link rel="stylesheet" type="text/css" href="styles/css/style.css">
+		<link rel="stylesheet" type="text/css" href="styles/css/misc.css">
 
 		<script type="text/javascript" src="libs/js/lodash.min.js"></script>
 		<script type="text/javascript" src="libs/js/jquery-1.11.3.min.js"></script>
