Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <a id="latest-version-available-online" class="anchor" href="#latest-version-available-online" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest version available online</h3>
 
 <p>After some more work, we have walking zombies, Game Overs and option to actually beat the levels. Still miles to go and current state doesn't really resemble the final gameplay, but you can check it out online nonetheless. Latest build is available at:
-<a href="http://ethnar.com/Zombielab/bin/#/game">http://ethnar.com/Zombielab/bin/#/game</a></p>
+<a href="http://ethnar.com/Zombielab/#/game">http://ethnar.com/Zombielab/#/game</a></p>
 
 <h3>
 <a id="welcome-to-zombielab" class="anchor" href="#welcome-to-zombielab" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to ZombieLab</h3>
