--- a/bin/index.html
+++ b/bin/index.html
@@ -3,9 +3,7 @@
 	<head>
 		<meta name="viewport" content="height=320, width=device-width">
 
-		<link rel="stylesheet" type="text/css" href="styles/css/reset.css">
 		<link rel="stylesheet" type="text/css" href="styles/css/style.css">
-		<link rel="stylesheet" type="text/css" href="styles/css/misc.css">
 
 		<script type="text/javascript" src="libs/js/lodash.min.js"></script>
 		<script type="text/javascript" src="libs/js/jquery-1.11.3.min.js"></script>
@@ -13,6 +11,7 @@
 		<script type="text/javascript" src="libs/js/angular/angular-route.js"></script>
 		<script type="text/javascript" src="libs/js/hammer.min.js"></script>
 		<script type="text/javascript" src="libs/js/gestures.min.js"></script>
+		<script type="text/javascript" src="app/js/misc.js"></script>
 		
 		<script type="text/javascript" src="app/js/app.js"></script> 
 		<script type="text/javascript" src="app/js/controllers/start.js"></script> 
