--- a/bin/index.html
+++ b/bin/index.html
@@ -13,21 +13,26 @@
 		<script type="text/javascript" src="libs/js/gestures.min.js"></script>
 		<script type="text/javascript" src="app/js/misc.js"></script>
 		
-		<script type="text/javascript" src="app/js/app.js"></script> 
+		<script type="text/javascript" src="app/js/app.js"></script>
+		
 		<script type="text/javascript" src="app/js/controllers/start.js"></script> 
 		<script type="text/javascript" src="app/js/controllers/main-menu.js"></script> 
 		<script type="text/javascript" src="app/js/controllers/team-setup.js"></script> 
-		<script type="text/javascript" src="app/js/controllers/game.js"></script> 
+		<script type="text/javascript" src="app/js/controllers/game.js"></script>
+
 		<script type="text/javascript" src="app/js/services/game.js"></script> 
 		<script type="text/javascript" src="app/js/services/character.js"></script> 
 		<script type="text/javascript" src="app/js/services/equipment.js"></script> 
 		<script type="text/javascript" src="app/js/services/map.js"></script> 
 		<script type="text/javascript" src="app/js/services/map-generator.js"></script> 
-		<script type="text/javascript" src="app/js/services/enemies.js"></script> 
+		<script type="text/javascript" src="app/js/services/enemies.js"></script>
+
 		<script type="text/javascript" src="app/js/directives/character-panel.js"></script> 
 		<script type="text/javascript" src="app/js/directives/item-slot.js"></script> 
-		<script type="text/javascript" src="app/js/directives/game-map.js"></script> 
+		<script type="text/javascript" src="app/js/directives/game-map.js"></script>
+
 		<script type="text/javascript" src="app/js/data/equipment.js"></script> 
+		<script type="text/javascript" src="app/js/data/character.js"></script> 
 
 	</head>
 	<body ng-app="ZombieLabApp">
