Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
+<a id="more-changes-coming-in" class="anchor" href="#more-changes-coming-in" aria-hidden="true"><span class="octicon octicon-link"></span></a>More changes coming in</h3>
+
+<p>Project's going strong, we some new features already implemented. Team members are getting more varied - with gear and skills. Inventory management works, you can swap items around and force a reload on a weapon. Skills and other items still need to be implemented, but we're getting there. And fast.</p>
+
+<p>As always, you can check the latest at <a href="http://ethnar.com/Zombielab/#/game">http://ethnar.com/Zombielab/#/game</a></p>
+
+<h3>
 <a id="latest-version-available-online" class="anchor" href="#latest-version-available-online" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest version available online</h3>
 
 <p>After some more work, we have walking zombies, Game Overs and option to actually beat the levels. Still miles to go and current state doesn't really resemble the final gameplay, but you can check it out online nonetheless. Latest build is available at:
