Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <p>Project's going strong, we some new features already implemented. Team members are getting more varied - with gear and skills. Inventory management works, you can swap items around and force a reload on a weapon. Skills and other items still need to be implemented, but we're getting there. And fast.</p>
 
-<p>As always, you can check the latest at <a href="http://ethnar.com/Zombielab/#/game">http://ethnar.com/Zombielab/#/game</a></p>
+<p>You can check out the latest at <a href="http://ethnar.com/Zombielab/">http://ethnar.com/Zombielab/</a></p>
 
 <h3>
 <a id="latest-version-available-online" class="anchor" href="#latest-version-available-online" aria-hidden="true"><span class="octicon octicon-link"></span></a>Latest version available online</h3>
