--- a/bin/index.html
+++ b/bin/index.html
@@ -30,6 +30,7 @@
 		<script type="text/javascript" src="app/js/directives/character-panel.js"></script> 
 		<script type="text/javascript" src="app/js/directives/item-slot.js"></script> 
 		<script type="text/javascript" src="app/js/directives/game-map.js"></script>
+		<script type="text/javascript" src="app/js/directives/skill-bar.js"></script>
 
 		<script type="text/javascript" src="app/js/data/equipment.js"></script> 
 		<script type="text/javascript" src="app/js/data/character.js"></script> 
