Modal service, item & character descriptions

--- a/bin/index.html
+++ b/bin/index.html
@@ -26,11 +26,13 @@
 		<script type="text/javascript" src="app/js/services/map.js"></script> 
 		<script type="text/javascript" src="app/js/services/map-generator.js"></script> 
 		<script type="text/javascript" src="app/js/services/enemies.js"></script>
+		<script type="text/javascript" src="app/js/services/misc.js"></script>
 
 		<script type="text/javascript" src="app/js/directives/character-panel.js"></script> 
 		<script type="text/javascript" src="app/js/directives/item-slot.js"></script> 
 		<script type="text/javascript" src="app/js/directives/game-map.js"></script>
 		<script type="text/javascript" src="app/js/directives/skill-bar.js"></script>
+		<script type="text/javascript" src="app/js/directives/misc.js"></script>
 
 		<script type="text/javascript" src="app/js/data/equipment.js"></script> 
 		<script type="text/javascript" src="app/js/data/character.js"></script> 
