Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
+<a id="going-strong" class="anchor" href="#going-strong" aria-hidden="true"><span class="octicon octicon-link"></span></a>Going strong</h3>
+
+<p>Been a little while since I've updated this log, but it was still really busy in here. The latest version has lots of improvements, starting with items that actually work, skills that actually affect your performance, information windows (hold tap/mouse to show character/item info), animations, performance improvements and lots more.</p>
+
+<p>The latest is available at: <a href="http://ethnar.com/Zombielab/">http://ethnar.com/Zombielab/</a></p>
+
+<h3>
 <a id="more-changes-coming-in" class="anchor" href="#more-changes-coming-in" aria-hidden="true"><span class="octicon octicon-link"></span></a>More changes coming in</h3>
 
 <p>Project's going strong, we some new features already implemented. Team members are getting more varied - with gear and skills. Inventory management works, you can swap items around and force a reload on a weapon. Skills and other items still need to be implemented, but we're getting there. And fast.</p>
