--- a/bin/index.html
+++ b/bin/index.html
@@ -38,7 +38,7 @@
 		<script type="text/javascript" src="app/js/data/character.js"></script> 
 
 	</head>
-	<body ng-app="ZombieLabApp">
+	<body ng-app="ZombieLabApp" oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
 		<div id="fps" style="position: fixed;bottom: 35px;right: 100px;"></div>
 		<div ng-view id="main-view">
 		</div>
