Back button handling

--- a/bin/index.html
+++ b/bin/index.html
@@ -5,6 +5,7 @@
 
 		<link rel="stylesheet" type="text/css" href="styles/css/style.css">
 
+		<script type="text/javascript" src="cordova.js"></script>
 		<script type="text/javascript" src="libs/js/lodash.min.js"></script>
 		<script type="text/javascript" src="libs/js/jquery-1.11.3.min.js"></script> 
 <!--		<script type="text/javascript" src="libs/js/zepto.js"></script>-->
@@ -48,5 +49,8 @@
 		</div>
 		<div ng-view id="main-view">
 		</div>
+		<script type="text/ng-template" id="game-pause-modal.html">
+			<div>Game paused</div>
+		</script>
 	</body>
 </html>
