--- a/bin/index.html
+++ b/bin/index.html
@@ -30,6 +30,7 @@
 		<script type="text/javascript" src="app/js/services/map.js"></script> 
 		<script type="text/javascript" src="app/js/services/map-generator.js"></script> 
 		<script type="text/javascript" src="app/js/services/enemies.js"></script>
+		<script type="text/javascript" src="app/js/services/tutorial.js"></script>
 		<script type="text/javascript" src="app/js/services/misc.js"></script>
 
 		<script type="text/javascript" src="app/js/directives/character-panel.js"></script> 
