--- a/bin/index.html
+++ b/bin/index.html
@@ -53,5 +53,7 @@
 		<script type="text/ng-template" id="game-pause-modal.html">
 			<div>Game paused</div>
 		</script>
+		<div class="tutorial-overlay">
+		</div>
 	</body>
 </html>
