--- a/bin/index.html
+++ b/bin/index.html
@@ -42,6 +42,16 @@
 		<script type="text/javascript" src="app/js/data/equipment.js"></script> 
 		<script type="text/javascript" src="app/js/data/character.js"></script> 
 
+		  <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+          </script>
+          <script type="text/javascript">
+            try {
+              var pageTracker = _gat._getTracker("UA-67904301-2");
+              pageTracker._trackPageview();
+            } catch(err) {}
+          </script>
 	</head>
 	<body ng-app="ZombieLabApp" ng-controller="zombieLabController" oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
 		<div class="loading-overlay loading-in-progress" ng-class="{'loading-in-progress': model.loading.isLoading}">
@@ -56,14 +66,5 @@
 		<div class="tutorial-overlay">
 		</div>
 
-		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-		  ga('create', 'UA-67904301-2', 'auto');
-		  ga('send', 'pageview');
-		</script>
 	</body>
 </html>
