--- a/bin/index.html
+++ b/bin/index.html
@@ -19,6 +19,10 @@
 		<script type="text/javascript" src="app/js/misc.js"></script>
 		<script type="text/javascript" src="app/js/app.js"></script>
 		
+		<script type="text/javascript" src="app/js/data/equipment.js"></script> 
+		<script type="text/javascript" src="app/js/data/character.js"></script> 
+		<script type="text/javascript" src="app/js/data/map.js"></script> 
+
 		<script type="text/javascript" src="app/js/controllers/start.js"></script> 
 		<script type="text/javascript" src="app/js/controllers/main-menu.js"></script> 
 		<script type="text/javascript" src="app/js/controllers/team-setup.js"></script> 
@@ -38,10 +42,6 @@
 		<script type="text/javascript" src="app/js/directives/game-map.js"></script>
 		<script type="text/javascript" src="app/js/directives/skill-bar.js"></script>
 		<script type="text/javascript" src="app/js/directives/misc.js"></script>
-
-		<script type="text/javascript" src="app/js/data/equipment.js"></script> 
-		<script type="text/javascript" src="app/js/data/character.js"></script> 
-		<script type="text/javascript" src="app/js/data/room.js"></script> 
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
