Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
+<a id="milestone-reached" class="anchor" href="#milestone-reached" aria-hidden="true"><span class="octicon octicon-link"></span></a>Milestone reached</h3>
+
+<p>All the core components for the game are now in. We have items, different room types, zombie spawners and even a tutorial.
+There's still lots of work to be done (game balance, random events, items, performance improvements etc.), but it's time to reach out and get some help to replace this excuse of graphics with [hopefully] something very plausible.
+Also, from now on I'll be keeping a more stable version in a separate location, with most recent dev version available at the usual location.</p>
+
+<p>Latest [stable] version is available at: <a href="http://ethnar.com/Zombielab/stable/">http://ethnar.com/Zombielab/stable/</a>
+Latest screenshot:
+<img src="http://i.imgur.com/g2y4jPP.png" alt="Screenshot"></p>
+
+<h3>
 <a id="going-strong" class="anchor" href="#going-strong" aria-hidden="true"><span class="octicon octicon-link"></span></a>Going strong</h3>
 
 <p>Been a little while since I've updated this log, but it was still really busy in here. The latest version has lots of improvements, starting with items that actually work, skills that actually affect your performance, information windows (hold tap/mouse to show character/item info), animations, performance improvements and lots more.</p>
