Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
 <a id="milestone-reached" class="anchor" href="#milestone-reached" aria-hidden="true"><span class="octicon octicon-link"></span></a>Milestone reached</h3>
 
 <p>All the core components for the game are now in. We have items, different room types, zombie spawners and even a tutorial.
-There's still lots of work to be done (game balance, random events, items, performance improvements etc.), but it's time to reach out and get some help to replace this excuse of graphics with [hopefully] something very plausible.
-Also, from now on I'll be keeping a more stable version in a separate location, with most recent dev version available at the usual location.</p>
+There's still lots of work to be done (game balance, random events, items, performance improvements etc.), but it's time to reach out and get some help to replace this excuse of graphics with [hopefully] something very plausible.</p>
 
-<p>Latest [stable] version is available at: <a href="http://ethnar.com/Zombielab/stable/">http://ethnar.com/Zombielab/stable/</a>
-Latest screenshot:
+<p>Also, from now on I'll be keeping a more stable version in a separate location, with most recent dev version available at the usual location.</p>
+
+<p>Latest [stable] version is available at: <a href="http://ethnar.com/Zombielab/stable/">http://ethnar.com/Zombielab/stable/</a></p>
+
+<p>Latest screenshot:
 <img src="http://i.imgur.com/g2y4jPP.png" alt="Screenshot"></p>
 
 <h3>
