Switch to touch events, update angular to 1.4.7

--- a/bin/index.html
+++ b/bin/index.html
@@ -12,7 +12,8 @@
 <!--		<script type="text/javascript" src="libs/js/zepto-extras.js"></script>-->
 		
 		<script type="text/javascript" src="libs/js/angular/angular.min.js"></script>
-		<script type="text/javascript" src="libs/js/angular/angular-route.js"></script>
+		<script type="text/javascript" src="libs/js/angular/angular-touch.min.js"></script>
+		<script type="text/javascript" src="libs/js/angular/angular-route.min.js"></script>
 		<script type="text/javascript" src="libs/js/hammer.min.js"></script>
 		<script type="text/javascript" src="libs/js/gestures.min.js"></script>
 		
@@ -51,7 +52,8 @@
 
   ga('create', 'UA-67904301-2', 'auto');
   ga('send', 'pageview');
-  $(document).click(function (event) {
+  $(document).on(ZombieLab.tap, function (event) {
+  	console.log(event);
 	ga('send', {
 	  hitType: 'event',
 	  eventCategory: 'click',
