--- a/bin/index.html
+++ b/bin/index.html
@@ -14,8 +14,8 @@
 		<script type="text/javascript" src="libs/js/angular/angular.min.js"></script>
 		<script type="text/javascript" src="libs/js/angular/angular-touch.min.js"></script>
 		<script type="text/javascript" src="libs/js/angular/angular-route.min.js"></script>
-		<script type="text/javascript" src="libs/js/hammer.min.js"></script>
-		<script type="text/javascript" src="libs/js/gestures.min.js"></script>
+<!--		<script type="text/javascript" src="libs/js/hammer.min.js"></script>-->
+<!--		<script type="text/javascript" src="libs/js/gestures.min.js"></script>-->
 		
 		<script type="text/javascript" src="app/js/misc.js"></script>
 		<script type="text/javascript" src="app/js/app.js"></script>
@@ -53,7 +53,6 @@
   ga('create', 'UA-67904301-2', 'auto');
   ga('send', 'pageview');
   $(document).on(ZombieLab.tap, function (event) {
-  	console.log(event);
 	ga('send', {
 	  hitType: 'event',
 	  eventCategory: 'click',
