Added dark rooms and flashlight

--- a/bin/index.html
+++ b/bin/index.html
@@ -29,6 +29,7 @@
 		<script type="text/javascript" src="app/js/controllers/team-setup.js"></script> 
 		<script type="text/javascript" src="app/js/controllers/game.js"></script>
 
+		<script type="text/javascript" src="app/js/services/events.js"></script> 
 		<script type="text/javascript" src="app/js/services/game.js"></script> 
 		<script type="text/javascript" src="app/js/services/character.js"></script> 
 		<script type="text/javascript" src="app/js/services/equipment.js"></script> 
