Fix card image name, small balance tweaks

--- a/bin/benchmark-weapons.html
+++ b/bin/benchmark-weapons.html
@@ -105,6 +105,7 @@
 		<script type="text/javascript" src="app/js/controllers/team-setup.js"></script> 
 		<script type="text/javascript" src="app/js/controllers/game.js"></script>
 
+		<script type="text/javascript" src="app/js/services/events.js"></script> 
 		<script type="text/javascript" src="app/js/services/game.js"></script> 
 		<script type="text/javascript" src="app/js/services/character.js"></script> 
 		<script type="text/javascript" src="app/js/services/equipment.js"></script> 
@@ -119,6 +120,7 @@
 		<script type="text/javascript" src="app/js/directives/game-map.js"></script>
 		<script type="text/javascript" src="app/js/directives/skill-bar.js"></script>
 		<script type="text/javascript" src="app/js/directives/misc.js"></script>
+
 		<style>
 			table td {
 				padding: 3px;
