Fixed images path, added GPU raster enabler

--- a/bin/benchmark-weapons.html
+++ b/bin/benchmark-weapons.html
@@ -153,9 +153,9 @@
 			</tr>
 			<tr ng-repeat="weapon in weapons">
 				<td>{{weapon.name}}</td>
-				<td><img ng-src="img/items/weapons/{{weapon.name}}.png" /></td>
+				<td><img ng-src="imgs/items/weapons/{{weapon.name}}.png" /></td>
 				<td class="number">{{weapon.gameDifficulty}}</td>
-				<td><img ng-src="img/items/ammo/{{weapon.ammoType}}.png" /></td>
+				<td><img ng-src="imgs/items/ammo/{{weapon.ammoType}}.png" /></td>
 				<td class="number">{{weapon.rof}}</td>
 				<td class="number">{{weapon.baseChanceToHit}}</td>
 				<td class="number">{{weapon.dmgMin}} - {{weapon.dmgMax}}</td>
