--- a/bin/index.html
+++ b/bin/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html5>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, minimum-scale=1.0">
+
 		<link rel="stylesheet" type="text/css" href="styles/css/style.css">
 
 		<script type="text/javascript" src="cordova.js"></script>
