--- a/bin/index.html
+++ b/bin/index.html
@@ -19,6 +19,12 @@
 		
 		<script type="text/javascript" src="app/js/misc.js"></script>
 		<script type="text/javascript" src="app/js/app.js"></script>
+
+		<script type="text/javascript" src="app/js/classes/event-handler.js"></script> 
+		<script type="text/javascript" src="app/js/classes/character.js"></script> 
+		<script type="text/javascript" src="app/js/classes/tile.js"></script> 
+		<script type="text/javascript" src="app/js/classes/item.js"></script> 
+		<script type="text/javascript" src="app/js/classes/item-slot.js"></script> 
 		
 		<script type="text/javascript" src="app/js/data/equipment.js"></script> 
 		<script type="text/javascript" src="app/js/data/character.js"></script> 
