Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,6 +32,14 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
+<a id="more-updates-coming-in-graphics--more" class="anchor" href="#more-updates-coming-in-graphics--more" aria-hidden="true"><span class="octicon octicon-link"></span></a>More updates coming in, graphics &amp; more</h3>
+
+<p>Rooms, walls and doors now have their graphics. There's still lots of work needed to put stuff inside the rooms so that each type of the room is recognizable, but we have a good start now.
+New stuff, like access cards, fire, explosives barrels and flashlights were added to the game. Same as with graphics - that's far from complete list of features, but you will have a better feel of how this game plays out.</p>
+
+<p>Latest version is available at: <a href="http://ethnar.com/Zombielab/stable/">http://ethnar.com/Zombielab/stable/</a></p>
+
+<h3>
 <a id="milestone-reached" class="anchor" href="#milestone-reached" aria-hidden="true"><span class="octicon octicon-link"></span></a>Milestone reached</h3>
 
 <p>All the core components for the game are now in. We have items, different room types, zombie spawners and even a tutorial.
